feat: integrate FluidModule and update input attributes for better responsiveness and accessibility in various field editors

--- a/client/src/app/features/base/table/column-editor/column-editor-drawer.component.html
+++ b/client/src/app/features/base/table/column-editor/column-editor-drawer.component.html
@@ -156,7 +156,7 @@
                     name="minDate"
                     [(ngModel)]="columnFormData.minValue"
                     [showTime]="true"
-                    class="flex flex-col"
+                    [fluid]="true"
                     appendTo="body"
                     placeholder="Select here..."
                   />
@@ -167,7 +167,7 @@
                     name="maxDate"
                     [(ngModel)]="columnFormData.maxValue"
                     [showTime]="true"
-                    class="flex flex-col"
+                    [fluid]="true"
                     appendTo="body"
                     placeholder="Select here..."
                   />
