--- a/client/src/app/features/base/table/field-editors/date/editor.component.html
+++ b/client/src/app/features/base/table/field-editors/date/editor.component.html
@@ -12,7 +12,7 @@
     [disabled]="viewOnly()"
     [(ngModel)]="data"
     [showTime]="true"
+    [fluid]="true"
     appendTo="body"
-    class="w-full flex flex-col"
   />
 </div>
