--- a/client/src/app/features/base/table/field-editors/text/editor.component.html
+++ b/client/src/app/features/base/table/field-editors/text/editor.component.html
@@ -6,7 +6,7 @@
   }
   <input
     pInputText
-    [attr.id]="fieldName"
+    [id]="fieldName"
     [placeholder]="placeholder() ?? 'Input here...'"
     [pAutoFocus]="autoFocus()"
     [readonly]="viewOnly()"
