--- a/client/src/app/features/base/table/field-editors/long-text/editor.component.html
+++ b/client/src/app/features/base/table/field-editors/long-text/editor.component.html
@@ -13,7 +13,7 @@
   <div class="relative w-full">
     <textarea
       pTextarea
-      [attr.id]="fieldName"
+      [id]="fieldName"
       [placeholder]="placeholder() ?? 'Input here...'"
       [pAutoFocus]="autoFocus()"
       [readonly]="viewOnly()"
