--- a/client/src/app/features/base/table/table-detail/table-detail.component.html
+++ b/client/src/app/features/base/table/table-detail/table-detail.component.html
@@ -5,6 +5,7 @@
     [(visible)]="visibleColumnEditor"
     [table]="tblService.selectedTable()"
     [column]="updatedColumn"
+    [field]="updatedColumnField"
     [mode]="updatedColumnMode"
     (onSave)="onRecordSave($event)"
   />
