--- a/client/src/app/shared/spreadsheet/spreadsheet.component.html
+++ b/client/src/app/shared/spreadsheet/spreadsheet.component.html
@@ -145,22 +145,23 @@
           } @else {
             <i [class]="`${column.field.icon}`"></i>
           }
-          <div
-            class="text-sm white-space-nowrap overflow-hidden truncate"
-            [attr.title]="column.field.name"
-          >
+          <div class="text-sm white-space-nowrap overflow-hidden truncate">
             {{ column.field.name }}
           </div>
           @if (column.field.required) {
             <i class="icon icon-asterisk text-red-500"></i>
           }
           @if (column.field.description?.length) {
-            <i
-              class="icon icon-info text-surface-500"
-              [pTooltip]="column.field.description"
-              tooltipPosition="bottom"
-            ></i>
+            <i class="icon icon-info text-surface-500"></i>
           }
+          <div class="flex flex-1 justify-end">
+            <p-button
+              icon="icon icon-chevron-down"
+              size="small"
+              [text]="true"
+              severity="secondary"
+            />
+          </div>
         </div>
         <div
           class="header-cell cell"
@@ -194,6 +195,15 @@
             tooltipPosition="bottom"
           ></i>
         }
+        <div class="flex flex-1 justify-end">
+          <p-button
+            icon="icon icon-chevron-down"
+            size="small"
+            [text]="true"
+            severity="secondary"
+            (click)="tableColumnService.openContextMenu($event, column, columnIndex)"
+          />
+        </div>
         @if (tableService.config().column.resizable) {
           <div
             class="header-cell__resize-handle"
