feat: enhance table service and routes with createColumn functionality, update column definition to support new validation checks and data types

--- a/client/src/app/features/base/table/column-editor/column-editor-drawer.component.html
+++ b/client/src/app/features/base/table/column-editor/column-editor-drawer.component.html
@@ -99,7 +99,7 @@
                   <label class="text-sm">Max size (bytes)</label>
                   <p-inputnumber
                     name="maxSize"
-                    [(ngModel)]="columnFormData.maxValue"
+                    [(ngModel)]="columnFormData.maxSize"
                     [useGrouping]="false"
                     placeholder="Input here..."
                   />
@@ -218,7 +218,7 @@
                   <label class="text-sm">Max size (bytes)</label>
                   <p-inputnumber
                     name="maxSize"
-                    [(ngModel)]="columnFormData.maxValue"
+                    [(ngModel)]="columnFormData.maxSize"
                     [useGrouping]="false"
                     placeholder="Input here..."
                   />
