feat: add support for Select data type in table service and column editor, enhance select field editor with options binding

--- a/client/src/app/features/base/table/field-editors/select/editor.component.html
+++ b/client/src/app/features/base/table/field-editors/select/editor.component.html
@@ -9,7 +9,9 @@
     [placeholder]="placeholder() ?? 'Select here...'"
     [pAutoFocus]="autoFocus()"
     [readonly]="viewOnly()"
+    [(ngModel)]="data"
     [options]="field().options"
+    appendTo="body"
     class="w-full"
   />
 </div>
