feat: add required field indicators to column and type labels in column and table editors for improved user guidance

--- a/client/src/app/features/base/table/table-editor/table-editor-drawer.component.html
+++ b/client/src/app/features/base/table/table-editor/table-editor-drawer.component.html
@@ -14,7 +14,10 @@
             </label>
             <div class="flex flex-col col-span-2 gap-8">
               <div class="flex flex-col gap-1">
-                <label for="name" class="text-sm">Name</label>
+                <label for="name" class="text-sm">
+                  Name
+                  <i class="icon icon-asterisk text-red-500"></i>
+                </label>
                 <input
                   pInputText
                   id="name"
