--- a/client/src/app/features/base/table/column-editor/column-editor-drawer.component.html
+++ b/client/src/app/features/base/table/column-editor/column-editor-drawer.component.html
@@ -14,7 +14,10 @@
             </label>
             <div class="flex flex-col col-span-2 gap-8">
               <div class="flex flex-col gap-1">
-                <label class="text-sm">Name</label>
+                <label class="text-sm">
+                  Name
+                  <i class="icon icon-asterisk text-red-500"></i>
+                </label>
                 <input
                   pInputText
                   name="name"
@@ -62,7 +65,10 @@
           </label>
           <div class="flex flex-col gap-8 col-span-2">
             <div class="flex flex-col gap-1">
-              <label class="text-sm">Type</label>
+              <label class="text-sm">
+                Type
+                <i class="icon icon-asterisk text-red-500"></i>
+              </label>
               <p-select
                 name="type"
                 optionLabel="name"
@@ -71,6 +77,7 @@
                 [(ngModel)]="selectedDataType"
                 (ngModelChange)="onSelectDataType($event)"
                 placeholder="Select here..."
+                required
               />
             </div>
             @switch (selectedDataType()) {
