refactor: rename onSave method to onColumnSave in table detail component and update related logic for clarity; enhance table editor drawer with reset functionality on hide

--- a/client/src/app/features/base/table/table-detail/table-detail.component.html
+++ b/client/src/app/features/base/table/table-detail/table-detail.component.html
@@ -7,7 +7,7 @@
     [column]="updatedColumn"
     [field]="updatedColumnField"
     [mode]="updatedColumnMode"
-    (onSave)="onRecordSave($event)"
+    (onSave)="onColumnSave($event)"
   />
   <record-editor-drawer
     [(visible)]="visibleRecordEditor"
